change commit github

--- a/event-olympia-frontend/.env
+++ b/event-olympia-frontend/.env
@@ -3,3 +3,4 @@ MONGODB_URI=mongodb://localhost:27017/event_olympia
 JWT_SECRET=M145672@Azeure29
 axios.defaults.withCredentials = true;
 VITE_API_URL=http://localhost:3000
+VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
