--- a/event-olympia-frontend/package.json
+++ b/event-olympia-frontend/package.json
@@ -15,15 +15,23 @@
     "@mantine/dates": "^7.17.1",
     "@mantine/form": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.8",
+    "@types/qrcode": "^1.5.5",
     "axios": "^1.7.9",
+    "jspdf": "^3.0.1",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-to-pdf": "^1.0.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
+    "multer-s3-transform": "^2.10.3",
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
