--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,15 +1,22 @@
-name: CI Pipeline
+name: Backend CI/CD Pipeline
 
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'event_olympia_backend/**'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'event_olympia_backend/**'
 
 jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: event_olympia_backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '18'
           cache: 'npm'
 
       - name: Install dependencies
@@ -31,29 +38,24 @@ jobs:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-      # Checkout code from the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build And Push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./event_olympia_backend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/betmate:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/event_olympia_backend:latest
 
-      # Log out from Docker Hub
       - name: Log out from Docker Hub
         run: docker logout 
