--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -48,9 +48,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
+          password: ${{ secrets.DOCKER_PASSWOR  
         uses: docker/build-push-action@v4
         with:
           context: ./event_olympia_backend
