--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -48,8 +48,9 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWOR  
-        uses: docker/build-push-action@v4
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - uses: docker/build-push-action@v4
         with:
           context: ./event_olympia_backend
           push: true
